# Simple-chess-dragging

./: Cargo.toml  README.md
src/: main.rs
src/components/: mod.rs
src/components/board/: drawing.rs  image_manager.rs  imp.rs  mod.rs
