[package]
name = "simple_chess_dragging"
version = "0.1.0"
edition = "2024"

[dependencies]
cairo-rs = { version = "0.20.10", features = ["svg"] }
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_14"] }
image = "0.25.6"
resvg = { version = "0.45.1", features = ["system-fonts", "text"] }
